Add company image upload and dedicated storage
